fixed padding on tablet breakpoint

--- a/sass/circle/core/docs.sass
+++ b/sass/circle/core/docs.sass
@@ -8,7 +8,7 @@ $icon-font-path: "../../../icons/"
   padding: 150px 0 0 280px
   transition: .2s
   @media screen and (max-width: $tablet-breakpoint)
-    padding-left: 0
+    padding: 80px 0 0 0
   &--header
     position: fixed
     top: 0
